<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">P4_3</string>
    <string name="titulo">Digite seu email:</string>
    <string name="email"></string>
    <string name="verificar">Verificar</string>
    <string name="status">Status:</string>
    <string name="nome"></string>
    <string name="dominio"></string>

</resources>