<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wincomp.example.p2_2.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/mTituloTextView"
        android:layout_width="185dp"
        android:layout_height="42dp"
        android:text="@string/titulo" />

    <EditText
        android:id="@+id/mEmailEditView"
        android:layout_width="185dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/email" >

        <requestFocus />
    </EditText>
    
     <Button
        android:id="@+id/mVerificarButton"
        android:layout_width="185dp"
        android:layout_height="42dp"
        android:text="@string/verificar"/>
    
    <TextView
        android:id="@+id/mNomeTextView"
        android:layout_width="185dp"
        android:layout_height="42dp"
        android:text="@string/nome" />
    
    <TextView
        android:id="@+id/mDominioTextView"
        android:layout_width="185dp"
        android:layout_height="42dp"
        android:text="@string/dominio" />

</LinearLayout>